--- a/index.html
+++ b/index.html
@@ -3,12 +3,20 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Real-Time Clock</title>
+  <title>Digital and Analog Clock</title>
   <link rel="stylesheet" href="styles.css">
 </head>
 <body>
   <div class="clock-container">
-    <span id="clock"></span>
+    <div class="digital-clock">
+      <span id="digital-clock"></span>
+    </div>
+    <div class="analog-clock">
+      <div class="hand hour" id="hour-hand"></div>
+      <div class="hand minute" id="minute-hand"></div>
+      <div class="hand second" id="second-hand"></div>
+      <div class="center-dot"></div>
+    </div>
   </div>
   <script src="script.js"></script>
 </body>
