--- a/index.html
+++ b/index.html
@@ -8,9 +8,12 @@
 </head>
 <body>
   <div class="clock-container">
+    <!-- Digital Clock -->
     <div class="digital-clock">
       <span id="digital-clock"></span>
     </div>
+    
+    <!-- Analog Clock -->
     <div class="analog-clock">
       <div class="hand hour" id="hour-hand"></div>
       <div class="hand minute" id="minute-hand"></div>
